--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -25,3 +25,11 @@
   font-family: Arial, Helvetica, sans-serif;
   color: hsl(0, 0%, 30%);
 }
+
+.student{
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  padding: 10px;
+  border: 1px solid hsla(0, 0%, 50%, 0.8);
+}
