--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -33,3 +33,21 @@
   padding: 10px;
   border: 1px solid hsla(0, 0%, 50%, 0.8);
 }
+
+.welcome-message{
+  font-size: 2.5em;
+  background-color: hsl(120, 100%, 42%);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0;
+}
+
+.login-prompt{
+  font-size: 2.5em;
+  background-color: red;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 0;
+}
