Made a reusable list component

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -51,3 +51,27 @@
   border-radius: 5px;
   margin: 0;
 }
+
+.list-category{
+  font-size: 2.5em;
+  font-weight: bold;
+  color: hsl(0, 34%, 55%);
+  margin-bottom: 10px;
+  text-align: center;
+  border: 3px solid;
+  border-radius: 0%5px;
+  background-color: aqua;
+}
+
+.list-items{
+  font-size: 2em;
+  list-style: none;
+  color: hsl(0, 0%, 25%);
+  text-align: center;
+  margin: 0;
+}
+
+.list-items li:hover{
+  color: hsl(0, 0%, 45%);
+  cursor: pointer;
+}
