--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -75,3 +75,31 @@
   color: hsl(0, 0%, 45%);
   cursor: pointer;
 }
+
+.counter-container{
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.count-display{
+  font-size: 5em;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
+.counter-button{
+  width: 150px;
+  height: 50px;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 3px 5px;
+  background-color: hsl(197, 100%, 58%);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.counter-button:hover{
+  background-color: hsl(197, 100%, 38%);
+}
