--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -136,3 +136,43 @@ input[type="color"]{
   border-radius: 10px;
   border: 3px solid hsl(0, 0%, 45%);
 }
+
+.to-do-list{
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 50px;
+}
+
+.to-do-list button{
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+}
+
+.add-button{
+  background-color: hsl(125, 47%, 54%);
+}
+.add-button:hover{
+  background-color: hsl(125, 47%, 34%);
+}
+.delete-button{
+  background-color: hsl(10, 90%, 50%);
+}
+.delete-button:hover{
+  background-color: hsl(10, 90%, 30%);
+}
+.move-button{
+  background-color: hsl(207, 90%, 50%);
+}
+.move-button:hover{
+  background-color: hsl(207, 90%, 30%);
+}
+
+.down-button{
+  background-color: hsl(11, 48%, 56%);
+}
+.down-button:hover{
+  background-color: hsl(11, 48%, 36%);
+}
