--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -142,6 +142,14 @@ input[type="color"]{
   margin-top: 50px;
 }
 
+.to-do-list input[type="text"]{
+  font-size: 1rem;
+    padding: 8px;
+    border: 2px solid hsla(0, 0%, 80%, 0.5);
+    border-radius: 5px;
+    color: grey;
+}
+
 .to-do-list button{
   padding: 10px 20px;
   color: white;
@@ -149,6 +157,7 @@ input[type="color"]{
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.5s ease;
+  margin:5px 5px;
 }
 
 .add-button{
@@ -175,4 +184,16 @@ input[type="color"]{
 }
 .down-button:hover{
   background-color: hsl(11, 48%, 36%);
+}
+
+.to-do-list li{
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding:15px;
+  background-color: hsl(0, 0%, 97%);
+  margin-bottom: 10px;
+  border: 3px solid hsla(0, 0%, 85%, 0.75);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
 }
