--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -218,3 +218,8 @@ input[type="color"]{
   font-family: monospace;
   text-shadow: 3px 3px 5px black;
 }
+
+.box{
+  border: 2px solid black;
+  padding: 10px;
+}
